examples/test/testpolicy6497.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6497
  namespace: namespace293
spec:
  podSelector:
    matchLabels:
      key48: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value25
          key27: value28
          key40: value0
      podSelector:
        matchLabels:
          key32: value49
          key10: value23
          key14: value3
